refactor: 파일 관련 DTO 따로 추출하여 사용